# dead-shop

./: .gitignore  Dockerfile  README.md  docker-compose-all.yml  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml
app/: db.sqbpro  manage.py
app/apps/cart/: cart.py  forms.py  models.py  urls.py  views.py
app/apps/cart/migrations/: 0001_initial.py  0002_alter_cartitem_amount.py  0002_initial.py  0003_alter_cart_client.py  0003_alter_cart_client_alter_cartitem_amount.py
app/apps/categories/: admin.py  apps.py  models.py  urls.py  views.py
app/apps/categories/migrations/: 0001_initial.py  0002_alter_category_options_category_slug_and_more.py  0003_alter_category_options.py  0004_alter_category_slug.py  0005_alter_category_id_alter_category_slug.py  0006_alter_category_id.py  0007_alter_category_options.py  0008_category_photo.py
app/apps/order/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
app/apps/order/migrations/: 0001_initial.py  0002_alter_orderitem_amount.py  0002_initial.py  0003_alter_order_user.py  0004_order_email.py  0005_orderitem_price.py
app/apps/products/: admin.py  documents.py  models.py  serializators.py  signals.py  urls.py  utils.py  views.py
app/apps/products/migrations/: 0001_initial.py  0002_alter_product_name.py  0002_product_category.py  0003_alter_product_name.py  0003_remove_product_image_url_product_photo.py  0004_alter_product_id.py  0004_alter_product_photo.py  (+1 more)
app/apps/users/: forms.py  models.py  urls.py  views.py
app/config/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
app/config/settings/: base.py  dev.py  prod.py  settings.py
app/static/css/: style.css
app/templates/: base.html
docker/app/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
(+19 files in other folders)
